Code clean up from static analysis